--- a/leetcode/22.md
+++ b/leetcode/22.md
@@ -1,28 +1,29 @@
 ## 给出 n 代表生成括号的对数，请你写出一个函数，使其能够生成所有可能的并且有效的括号组合
 
-var generateParenthesis = function(n) {
-    if (n <= 0) {
-        return []
-    }
+思路题解：
+  var generateParenthesis = function(n) {
+      if (n <= 0) {
+          return []
+      }
 
-    let list = []
+      let list = []
 
-    function rep (left, right, total, res) {
-        if (left === total && right === total) {
-            list.push(res)
-            return
-        }
+      function rep (left, right, total, res) {
+          if (left === total && right === total) {
+              list.push(res)
+              return
+          }
 
-        if (left < total) {
-            rep(left+1, right, total, res+'(')
-        }
+          if (left < total) {
+              rep(left+1, right, total, res+'(')
+          }
 
-        if (right < left) {
-            rep(left, right+1, total, res+')')
-        }
-    }
+          if (right < left) {
+              rep(left, right+1, total, res+')')
+          }
+      }
 
-    rep(0, 0, n, '')
+      rep(0, 0, n, '')
 
-    return list
-}
+      return list
+  }
